--- a/.codecov.yml
+++ b/.codecov.yml
@@ -3,19 +3,32 @@ codecov:
     require_ci_to_pass: true
     # wait until at least one linux and one windows build has succeeded (see the test job's build matrix)
     after_n_builds: 6
-comment:
-  behavior: default
-  layout: header, diff
-  require_changes: false
+comment: false
 coverage:
+  range: "50...100"
   precision: 2
-  range:
-  - 50.0
-  - 100.0
   round: down
   status:
     changes: false
     patch: false
+    # split up coverage reports by path
+    # don't set coverage targets and instead set change thresholds
     project:
-      default:
-        target: 30
+      # ignore default status
+      default: false
+      streamlink:
+        threshold: 1%
+        paths:
+          - "src/streamlink/"
+          - "!src/streamlink/plugins/"
+      streamlink_cli:
+        threshold: 1%
+        paths:
+          - "src/streamlink_cli/"
+      plugins:
+        paths:
+          - "src/streamlink/plugins/"
+      tests:
+        threshold: 1%
+        paths:
+          - "tests/"
