--- a/.codecov.yml
+++ b/.codecov.yml
@@ -3,7 +3,11 @@ codecov:
     require_ci_to_pass: true
     # wait until at least one linux and one windows build has succeeded (see the test job's build matrix)
     after_n_builds: 6
-comment: false
+comment:
+  # this also configures the layout of PR check summaries / comments
+  layout: "reach, diff, flags, files"
+  # don't ever let the codecov bot comment on PRs
+  after_n_builds: 999999999
 coverage:
   range: "50...100"
   precision: 2
@@ -12,23 +16,28 @@ coverage:
     changes: false
     patch: false
     # split up coverage reports by path
-    # don't set coverage targets and instead set change thresholds
+    # don't set coverage targets and instead set coverage thresholds
     project:
-      # ignore default status
-      default: false
+      # we can't disable the overall default project, because only this will have PR check summaries / comments
+      # this replaces the PR comment
+      default:
+        target: 50
       streamlink:
-        threshold: 1%
+        threshold: 1
         paths:
           - "src/streamlink/"
           - "!src/streamlink/plugins/"
       streamlink_cli:
-        threshold: 1%
+        threshold: 1
         paths:
           - "src/streamlink_cli/"
       plugins:
+        # don't set a threshold on plugins
+        target: 30
         paths:
           - "src/streamlink/plugins/"
       tests:
-        threshold: 1%
+        # new tests should always be fully covered
+        threshold: 0
         paths:
           - "tests/"
